syntax = "proto3";

package grpc; //package与java_package有些不同，java_package是定义编译生成的java文件所在的目录，而package是对应的java类的命名空间
option java_package = "com.rivers.proto";
option java_outer_classname = "UserServiceProto"; //要生成Java类的名称
option java_multiple_files = true;

message LoginUser {
    string username = 1;
    string userId = 2;
}

message SaveUserReq {
    string username = 1;
    string password = 2;
    string phone = 3;
    string mail = 4;
    string nickname = 5;
    string userId = 6;
    LoginUser loginUser = 7;
}

message UpdateUserReq {
    int64 id = 1;
    string username = 2;
    string password = 3;
    string phone = 4;
    string mail = 5;
    string nickname = 6;
    string userId = 7;
    LoginUser loginUser = 8;
}

message User {
    int64 id = 1;
    string username = 2;
    string phone = 3;
    string mail = 4;
    string nickname = 5;
    string userId = 6;
    string createTime = 7;
    string updateTime = 8;
}

message UserPageReq {
    int32 currentPage = 1;
    int32 pageSize = 2;
    string username = 3;
    string userId = 4;
    string nickname = 5;
}

message UserPageRes {
    int64 total = 1;
    repeated User users = 2;
}


message UserReq {
    string userId = 1;
}

message UserDetailRes {
    int64 id = 1;
    string username = 2;
    string phone = 3;
    string mail = 4;
    string nickname = 5;
    string userId = 6;
}

message SaveRoleReq {
    string roleCode = 1;
    string roleName = 2;
    LoginUser loginUser = 3;
}

message UpdateRoleReq {
    int64 id = 1;
    string roleCode = 2;
    string roleName = 3;
    LoginUser loginUser = 4;
}

message Role {
    int64 id = 1;
    string roleCode = 2;
    string roleName = 3;
    string createTime = 4;
    string updateTime = 5;
}

message RolePageReq {
    int32 currentPage = 1;
    int32 pageSize = 2;
    string roleCode = 3;
    string roleName = 4;
}

message RolePageRes {
    int64 total = 1;
    repeated Role roles = 2;
}

message DeleteRoleReq {
    string roleCode = 1;
    LoginUser loginUser = 2;
}

message RoleDetailReq {
    string roleCode = 1;
}

message RoleDetailRes {
    int64 id = 1;
    string roleCode = 2;
    string roleName = 3;
}

message SaveUserRoleReq {
    string roleCode = 1;
    repeated string userIds = 2;
    LoginUser loginUser = 3;
}

message RemoveUserRoleReq {
    string roleCode = 1;
    repeated string userIds = 2;
    LoginUser loginUser = 3;
}

message UserRolePageReq {
    int32 currentPage = 1;
    int32 pageSize = 2;
    string username = 3;
    string userId = 4;
}

message UserRolePageRes {
    int64 total = 1;
    repeated User users = 2;
}

message SaveMenuReq {
    string menuCode = 1;
    string menuName = 2;
    int64 parentId = 3;
    int32 menuType = 4;
    string icon = 5;
    int32 sortOrder = 6;
    string permissionCode = 7;
    string routePath = 8;
    LoginUser loginUser = 9;
}

message UpdateMenuReq {
    int64 id = 1;
    string menuCode = 2;
    string menuName = 3;
    int64 parentId = 4;
    int32 menuType = 5;
    string icon = 6;
    int32 sortOrder = 7;
    string permissionCode = 8;
    string routePath = 9;
    LoginUser loginUser = 10;
}

message Menu {
    int64 id = 1;
    string menuCode = 2;
    string menuName = 3;
    int64 parentId = 4;
    int32 menuType = 5;
    string icon = 6;
    int32 sortOrder = 7;
    string permissionCode = 8;
    string routePath = 9;
    string createTime = 10;
    string updateTime = 11;
}

message MenuTreeRes {
    int64 id = 1;
    string menuCode = 2;
    string menuName = 3;
    int64 parentId = 4;
    int32 menuType = 5;
    string icon = 6;
    int32 sortOrder = 7;
    string permissionCode = 8;
    string routePath = 9;
}

message MenuDetailReq {
    string menuCode = 1;
}

message MenuDetailRes {
    int64 id = 1;
    string menuCode = 2;
    string menuName = 3;
    int64 parentId = 4;
    int32 menuType = 5;
    string icon = 6;
    int32 sortOrder = 7;
    string permissionCode = 8;
    string routePath = 9;
}

message DeleteMenuReq {
    string menuCode = 1;
    LoginUser loginUser = 2;
}

message SaveRoleMenuReq {
    string roleCode = 1;
    repeated string menuCodes = 2;
    LoginUser loginUser = 3;
}

message RemoveRoleMenuReq {
    string roleCode = 1;
    repeated string menuCodes = 2;
    LoginUser loginUser = 3;
}

message RoleMenuTreeReq {
    string roleCode = 1;
}

message OwnedMenuTreeReq {
    LoginUser loginUser = 1;
}

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginRes {
    string token = 1;
}

message SaveDicReq {
    string dicKey = 1;
    string dicValue = 2;
    string dicDesc = 3;
    int64 parentId = 4;
    int32 sort = 5;
    LoginUser loginUser = 6;
}

message UpdateDicReq {
    int64 id = 1;
    string dicKey = 2;
    string dicValue = 3;
    string dicDesc = 4;
    int64 parentId = 5;
    int32 sort = 6;
    LoginUser loginUser = 7;
}

message Dic {
    int64 id = 1;
    string dicKey = 2;
    string dicValue = 3;
    string dicDesc = 4;
    int64 parentId = 5;
}

message DicDataReq {
    string dicKey = 1;
    LoginUser loginUser = 2;
}

message DicDataRes {
    repeated Dic dicData = 1;
}